starting programs as a thread from other main program

--- a/myshell/src/Makefile
+++ b/myshell/src/Makefile
@@ -13,6 +13,9 @@ DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 _OBJ = main.o shell.o process_manager.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
+_OBJ2 = user_manager.o
+OBJ2 = $(patsubst %,$(ODIR)/%,$(_OBJ2))
+
 %.o: %.c $(DEPS)
 	$(CC) -o -o $@ $< $(CFLAGS)
 
@@ -20,6 +23,9 @@ $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 myshell: $(OBJ)
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
+user_manager: $(OBJ2)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
